# Chemical-Pressure

./: LICENSE  Plotting Chemical Pressures.py  PlottingChemicalPressures With Sliders.py  PlottingChemicalPressures.py  Plotting_Chemical_Pressures (1).py  README.md  Ti_TiSe2_static-cell  Ti_TiSe2_static-coeff  Ti_TiSe2_static-geo  Ti_TiSe2_static_o_DS2_DEN.xyz  pyproject.toml  setup.py
Chemical Pressure Plotting/: Plotting Chemical Pressures.py
