[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Chemical-Pressure-Plotter"
version = "2"
authors = [
  { name="Alex Smits", email="ajsmits2@wisc.edu" },
]
description = "This program plots chemical pressures in crystal compounds using pyvista."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pcross0405/BandU"
Issues = "https://github.com/pcross0405/BandU/issues"
